src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Local_Lang__c</fullName>
        <label>Local Language Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Add_To_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field when you need to quickly identify a large group of people to add to a campaign.  Only use with Excel Connector.</description>
        <inlineHelpText>Use this field when you need to quickly identify a large group of people to add to a campaign.  Only use with Excel Connector.</inlineHelpText>
        <label>Add To Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Reports__c</fullName>
        <label>Analyst Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance Software Deal Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celent Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brochures__c</fullName>
        <label>Brochures</label>
        <picklist>
            <picklistValues>
                <fullName>Guidewire PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire ClaimCenter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CS_Accepted_DCEVM_EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted DCEVM EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Accepted_EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Access_Type__c</fullName>
        <label>Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Business_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_General_Announcements__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference -  General Announcements</description>
        <label>General Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Home_Office__c</fullName>
        <label>Home Office</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Mateo (HQ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago (Solution Center)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Last_Survey_Sent__c</fullName>
        <description>Last Survey Sent Date to Customer</description>
        <label>Last Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Partner_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <externalId>true</externalId>
        <label>RightNow ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_SLA_Report_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Report Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Service_Maintenance_Security__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Service/Maintenance/Security</description>
        <label>Service/Maintenance/Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Skype_Login__c</fullName>
        <label>Skype Login</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Social_Hivelive_UserID__c</fullName>
        <label>Social Hivelive UserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Software_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Software_Releases__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Software Releases</description>
        <label>Software Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Surveys__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Surveys</description>
        <label>Surveys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Technical_Bulletin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Communication Preference - Technical Bulletin</description>
        <label>Technical Bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Technical_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Yahoo_IM__c</fullName>
        <label>Yahoo! IM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>For use in filtering mailings; Top Mgmt is for CEO, COO, President, Chairman, etc.</description>
        <label>Subject  Area</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClaimCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Starter_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Starter Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityAccessRequestId__c</fullName>
        <label>CommunityAccessRequestId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connections_Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did this person attend Connections?</description>
        <inlineHelpText>Has this person ever attended a Guidewire Connections event?</inlineHelpText>
        <label>Connections Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connections_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this person want to receive announcements or an invitation to Connections?  Customers and qualified prospects ONLY.</inlineHelpText>
        <label>Connections Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Form_Comment__c</fullName>
        <description>This is a field that records comments submitted on our Marketo &quot;Contact Us&quot; form.</description>
        <label>Contact-Form-Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_LOB__c</fullName>
        <label>Contact LOB</label>
        <picklist>
            <picklistValues>
                <fullName>Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car/Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compulsory Automobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compulsory Automobile Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employees&apos; Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire &amp; Allied Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Cargo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property &amp; Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Automobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWP__c</fullName>
        <label>DWP</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100-300M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$300-1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1-5B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;$5B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWP_for_LOB__c</fullName>
        <description>Used by International.  Referrs to DWP for LOB headed by contact.</description>
        <label>DWP for LOB (thousands)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datasheet__c</fullName>
        <label>Datasheet</label>
        <picklist>
            <picklistValues>
                <fullName>CC Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for P&amp;C Insurers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for Workers&apos; Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for Third Party Adminstrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC for Self-Insureds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not contact this person via email or direct mail.  Full Opt-Out.</description>
        <inlineHelpText>Do not contact this person via email or direct mail.  Full Opt-Out.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Phone_Ext__c</fullName>
        <label>Eloqua Form Phone Ext</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Phone__c</fullName>
        <description>Field used by Eloqua.  Contains contact phone number filled out via webform.</description>
        <label>Eloqua Form Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Title__c</fullName>
        <description>Contains job title of contact based on what they filled out via a web form and submitted through Eloqua system.</description>
        <label>Eloqua Form Title</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating_HAT_Date__c</fullName>
        <label>Eloqua Lead Rating – HAT-Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating_HAT__c</fullName>
        <label>Eloqua Lead Rating – HAT</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating_Last__c</fullName>
        <label>Eloqua Lead Rating – Last</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score_Last_Date__c</fullName>
        <label>Eloqua Lead Score - Last-Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Score_Last__c</fullName>
        <label>Eloqua Lead Score – Last</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Subscriptions__c</fullName>
        <description>Custom field for storing Marketo subscriptions</description>
        <label>Email Subscriptions</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Invitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Invitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Role__c</fullName>
        <inlineHelpText>If someone has multiple titles, put the highest ranking title in this field.  Rank (Highest to Lowest): Chairman, President, CEO, CFO, COO, VP, Director, Manager</inlineHelpText>
        <label>Executive Role</label>
        <picklist>
            <picklistValues>
                <fullName>L1 = C-Level, President, Board Member, Senior/Exec Vice President, Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2 = Vice President, Director, Senior Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3 = Assistant Vice President, Manager, Lead, Head of, Associate, Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L4 = Developer, Architect, Integrator, Technologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L5 = Supervisor, Account Exec, Influencer, Individual Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L6 = Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L7 = Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L8 = Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L9 = Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L10 = Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_parties_we_use__c</fullName>
        <label>External parties we use</label>
        <picklist>
            <picklistValues>
                <fullName>Independent agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent adjusters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage/repair network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass claims admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical bill review</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <description>touch date for follow up</description>
        <label>Follow up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guidewire_Live_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guidewire Live Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidewire_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guidewire Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidewire_Webinars_and_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guidewire Webinars and Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Trends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry Trends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <label>Interested in</label>
        <picklist>
            <picklistValues>
                <fullName>Automated claims assign.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividing claims amoung handlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flagging claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capturing granular claims info</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Invoicing_Contact__c</fullName>
        <formula>IF(Number_of_BillTo_ShipTo__c &gt; 0, TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoicing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Community_User__c</fullName>
        <formula>IF(OR( User__c != NULL, User__c != &apos;&apos;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Community User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Account_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the primary account contact</description>
        <label>Is Primary Account Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key Executive for Educated and Aware</description>
        <label>Key Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_to_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows relationship of contacts.</description>
        <label>Known_to_1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOB_Title__c</fullName>
        <description>Used by International to include LOB Title for individual</description>
        <label>LOB Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language_Specific_Name__c</fullName>
        <description>This field is used to capture the name and title in the character set and language of the country.</description>
        <inlineHelpText>This field is used to capture the name and title in the character set and language of the country.</inlineHelpText>
        <label>Language Specific Name</label>
        <length>512</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Language_Specific_Title__c</fullName>
        <label>Language Specific Title</label>
        <length>300</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <description>When was the contact information and/or subscription preferences last updated?</description>
        <inlineHelpText>When was the contact information and/or subscription preferences last updated?</inlineHelpText>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0610 White Paper on INN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0703 INN Claim Portal Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0905 White Paper on INN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-0906 Banner Ads CC UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-INN Policy SW Lead Locator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising-KnowledgeStorm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst/Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment/ met personally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference_11 Messekongress Claims April 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference_11 Messekongress IT Nov 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Contact/Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - FR_VC Workshop Feb2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-PC-Roadshow-May-2011-Columbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-PC-Roadshow-May-2011-NYC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event-PC-Roadshow-May-2011-Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - UK_ClaimsForum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - UK_StrategicClaimsConference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - UK_TINTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event - UK_XmasDinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0612 RTG Breakfast Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-0706 BC Toronto Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Event-1010 FR Breakfast Axa</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lines_of_Business__c</fullName>
        <label>Lines of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Personal lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commericial standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commerical specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers comp</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Local_Language_Assitant__c</fullName>
        <label>Local Language Assistant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Accelerator Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Local_Language__c</fullName>
        <description>This field is for  storing a contact&apos;s address in Local Language</description>
        <label>Local Language Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this contact want to receive announcements about web seminars, case studies, white paper offers, etc?</inlineHelpText>
        <label>Marketing Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Form_Phone__c</fullName>
        <label>Marketo Form Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>MI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_company_prefers__c</fullName>
        <label>My company prefers</label>
        <picklist>
            <picklistValues>
                <fullName>Internal systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaged software</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Quarterly Newsletter Subscription</description>
        <inlineHelpText>Does this person want to receive the Guidewire Quarterly Newsletter?</inlineHelpText>
        <label>Newsletter Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_longer_with_firm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer with firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_BillTo_ShipTo__c</fullName>
        <label>Number of BillTo/ShipTo</label>
        <summaryForeignKey>Account_Contact__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PR_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this person want to receive press announcements?</inlineHelpText>
        <label>PR Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Absence_End_Date__c</fullName>
        <label>Absence End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Absence_Start_Date__c</fullName>
        <label>Absence Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>